opam-version: "2.0"
synopsis: "Non-blocking logger with eio"
maintainer: ["Satoru Kawahara <s1311350@gmail.com>"]
authors: ["Satoru Kawahara <s1311350@gmail.com>"]
license: "MIT"
homepage: "https://github.com/Nymphium/nloge"
doc: "https://nymphium.github.io/nloge"
bug-reports: "https://github.com/Nymphium/nloge/issues"
dev-repo: "git+https://github.com/Nymphium/nloge.git"
depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.7.0"}
  "eio"
  "ppx_deriving"
  "yojson" {>= "1.6.0"}
  "ptime"

  "eio_main" { with-test }
  "ppx_expect" { with-test }
  "alcotest" { with-test }
  "mdx" { with-test }

  "odoc" { with-doc }
  "odig" { with-doc }
]

build: ["dune" "build" "-j" jobs "-p" name]
